RESOLVED FIXED 260095
REGRESSION (Sonoma): Media elements can trigger extra compositing updates, increasing power usage
https://bugs.webkit.org/show_bug.cgi?id=260095
Summary REGRESSION (Sonoma): Media elements can trigger extra compositing updates, in...
Simon Fraser (smfr)
Reported 2023-08-11 14:35:39 PDT
Changes related to bug 252021 and later fixing cause media to trigger extra rendering updates sometimes, which can increase system power during YouTube playback.
Attachments
Simon Fraser (smfr)
Comment 1 2023-08-11 14:35:55 PDT
Simon Fraser (smfr)
Comment 2 2023-08-11 14:40:33 PDT
EWS
Comment 3 2023-08-13 09:24:54 PDT
Committed 266855@main (050470812f66): <https://commits.webkit.org/266855@main> Reviewed commits have been landed. Closing PR #16621 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.