REGRESSION (Sonoma): Media elements can trigger extra compositing updates, increasing power usage https://bugs.webkit.org/show_bug.cgi?id=260095 rdar://113643405

Reviewed by Jer Noble.

After media layer double-hosting (260575@main) and subsequent fixes (261455@main, 264812@main)
every call to GraphicsLayerCA::setContentsToVideoElement() triggered layer tree mutations via
updateVideoGravity() and noteSublayersChanged(), which schedule rendering updates. These in
turn result in CA commits in the UI process, causing a meassurable power regression.

Fix by early returning from GraphicsLayerCA::setContentsToVideoElement() when nothing has changed.

* LayoutTests/media/media-source/media-source-rendering-update-count-expected.txt: Added.
* LayoutTests/media/media-source/media-source-rendering-update-count.html: Added.
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::setContentsToVideoElement):

Canonical link: https://commits.webkit.org/266855@main